--- a/index.html
+++ b/index.html
@@ -135,43 +135,48 @@
 
       function CalculatorProvider({ children }) {
         const [history, setHistory] = React.useState([]);
+        const historyStoregeKey = "history";
+
+        React.useEffect(() => {
+          const savedHistory = localStorage.getItem(historyStoregeKey);
+          if (savedHistory) {
+            setHistory(JSON.parse(savedHistory));
+          }
+        }, []);
 
         function updateHistory(operation, parsedResult) {
-          setHistory((prev) => [...prev, `${operation} = ${parsedResult}`]);
+          setHistory((prev) => {
+            const updatedHistory = [...prev, `${operation} = ${parsedResult}`];
+
+            localStorage.setItem(
+              historyStoregeKey,
+              JSON.stringify(updatedHistory)
+            );
+
+            return updatedHistory;
+          });
         }
+
+        function clearHistory() {
+          setHistory([]);
+          localStorage.removeItem(historyStoregeKey);
+        }
+
         return (
-          <CalculatorContext.Provider value={{ history, updateHistory }}>
+          <CalculatorContext.Provider
+            value={{ history, updateHistory, clearHistory }}
+          >
             {children}
           </CalculatorContext.Provider>
         );
       }
 
-      function CalculatorDisplay({ operation, result }) {
-        return (
-          <div
-            className={` flex flex-col gap-2 px-[1.375rem] cursor-default select-none`}
-          >
-            <Text
-              as="div"
-              variant="muted"
-              className="flex items-center justify-end h-7"
-            >
-              {result && operation}
-            </Text>
-            <div className="flex items-center justify-between h-9">
-              <Text variant="muted">=</Text>
-              <Text variant="blast">{result || operation}</Text>
-            </div>
-          </div>
-        );
-      }
-
-      function Calculator() {
+      function useCalculator() {
         const [operation, setOperation] = React.useState("");
         const [result, setResult] = React.useState("");
         const { updateHistory } = React.useContext(CalculatorContext);
 
-        function handleInputClick(input) {
+        function doOperation(input) {
           if (input === "C") {
             setOperation("");
             setResult("");
@@ -206,6 +211,35 @@
           }
           setOperation(`${operation}${input}`);
         }
+        return { operation, result, doOperation };
+      }
+
+      function CalculatorDisplay({ operation, result }) {
+        return (
+          <div
+            className={` flex flex-col gap-2 px-[1.375rem] cursor-default select-none`}
+          >
+            <Text
+              as="div"
+              variant="muted"
+              className="flex items-center justify-end h-7"
+            >
+              {result && operation}
+            </Text>
+            <div className="flex items-center justify-between h-9">
+              <Text variant="muted">=</Text>
+              <Text variant="blast">{result || operation}</Text>
+            </div>
+          </div>
+        );
+      }
+
+      function Calculator() {
+        const { operation, result, doOperation } = useCalculator();
+
+        function handleInputClick(input) {
+          doOperation(input);
+        }
         return (
           <Card
             className={`flex flex-col gap-[1.625rem] w-[22.25rem] pt-14 px-8 pb-8`}
@@ -233,12 +267,23 @@
       }
 
       function OperationHistory() {
-        const { history } = React.useContext(CalculatorContext);
+        const { history, clearHistory } = React.useContext(CalculatorContext);
         return (
           <Card className="w-full py-10 px-8">
-            <Text as="h1" variant="heading" className="mb-4">
-              Operation History
-            </Text>
+            <div className="flex items-center justify-between mb-4">
+              <Text as="h1" variant="heading">
+                Operation History
+              </Text>
+              {history.length > 0 && (
+                <Button
+                  variant="primary"
+                  className="!text-lg px-4 py-2"
+                  onClick={clearHistory}
+                >
+                  Clear
+                </Button>
+              )}
+            </div>
 
             {history.length > 0 ? (
               <ul className="flex flex-col gap-3">
